plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'de.KnollFrank.routeoptimizerforgooglemaps'
    compileSdk {
        version = release(36) {
            minorApiLevel = 1
        }
    }

    defaultConfig {
        applicationId "de.KnollFrank.routeoptimizerforgooglemaps"
        minSdk 26
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            optimization {
                enable false
            }
        }
    }

    testOptions {
        unitTests {
            includeAndroidResources = true
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation libs.activity.ktx
    implementation libs.appcompat
    implementation libs.constraintlayout
    implementation libs.material

    // Core App Dependencies
    implementation libs.recyclerview
    implementation libs.play.services.location
    implementation libs.jsprit.core
    implementation libs.okhttp

    testImplementation libs.junit
    testImplementation libs.mockwebserver
    testImplementation libs.robolectric
    testImplementation libs.core

    androidTestImplementation libs.espresso.core
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.uiautomator
    androidTestImplementation libs.rules
}